Small update for graph "Performance Improvement By Image Optimization"

--- a/code/dev/parts/reports/imageengine-analytics/imageengine-solidgauge-performance-improvement.tpl.html
+++ b/code/dev/parts/reports/imageengine-analytics/imageengine-solidgauge-performance-improvement.tpl.html
@@ -1,4 +1,4 @@
-<div class="reports_charts_title h3 graph-title inline-block" _style="width:90%">{{ heading }}
+<div class="reports_charts_title h3 graph-title inline-block" style="width:90%">{{ heading }}
   <label ng-if="!!popoverHelpHTML" uib-popover-html="::popoverHelpHTML" style="font-size: 14px;" class="text-info graph-help-icon"
     popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
     popover-placement="top">
