--- a/code/dev/parts/waf-analytics/waf-heatmap/waf-heatmap.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-heatmap/waf-heatmap.tpl.html
@@ -1,7 +1,12 @@
 <div class="container-fluid waf-heatmap">
   <div class="row">
     <div class="col-md-12">
-      <h2 class="page-title">WAF Heatmap</h2>
+      <h2 class="page-title inline-block">WAF Heatmap</h2>
+      <label ng-if="!!popoverHelpHTML" uib-popover-html="::popoverHelpHTML" class="text-info page-title-help-icon"
+        popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+        popover-placement="right">
+        <i class="fa fa-question-circle" aria-hidden="true"></i>
+      </label>
     </div>
   </div>
 
