--- a/code/dev/parts/dns_analytics/dns_analytics.tpl.html
+++ b/code/dev/parts/dns_analytics/dns_analytics.tpl.html
@@ -48,6 +48,10 @@
               <div class="panel nd-block">
                 <div class="panel-heading">
                   <label class="title h4">Total DNS Zones<br>&nbsp</label>
+                  <label ng-if="!!popoverHelpHTML['accountTotalDNSZones']" uib-popover-html="::popoverHelpHTML['accountTotalDNSZones']" class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
+                    popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="top">
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                  </label>
                 </div>
                 <div class="panel-body"><span class="stats-value h4"> {{vm.accountTotalDNSZones || 0}}</span> </div>
               </div>
@@ -56,6 +60,11 @@
               <div class="panel nd-block">
                 <div class="panel-heading">
                   <label class="title h4">DNS Records<br>For This Domain</label>
+                  <label ng-if="!!popoverHelpHTML['totalDNSZoneRecords']" uib-popover-html="::popoverHelpHTML['totalDNSZoneRecords']" class="text-info graph-help-icon"
+                    popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                    popover-placement="top">
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                  </label>
                 </div>
                 <div class="panel-body"><span class="stats-value h4">{{vm.totalDNSZoneRecords || 0}}</span></div>
               </div>
@@ -64,6 +73,11 @@
               <div class="panel nd-block">
                 <div class="panel-heading ">
                   <label class="title h4">DNS Queries <br>For Last 30 Days</label>
+                  <label ng-if="!!popoverHelpHTML['totalDNSZoneQueries30d']" uib-popover-html="::popoverHelpHTML['totalDNSZoneQueries30d']" class="text-info graph-help-icon"
+                    popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                    popover-placement="top">
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                  </label>
                 </div>
                 <div class="panel-body"><span class="stats-value h4">{{vm.totalDNSZoneQueries30d || 0}}</span></div>
               </div>
