--- a/code/dev/parts/reports/edge-cache.html
+++ b/code/dev/parts/reports/edge-cache.html
@@ -33,6 +33,11 @@
               <div class="panel nd-block">
                 <div class="panel-heading">
                   <label class="title h4">Number <br class="hidden-xs hidden-sm">Of Unique Objects</label>
+                  <label ng-if="!!popoverHelpHTML['total_unique_objects']" uib-popover-html="::popoverHelpHTML['total_unique_objects']" class="text-info graph-help-icon"
+                    popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                    popover-placement="top">
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                  </label>
                 </div>
                 <div class="panel-body"><span class="stats-value h4"> {{vm.edgeCacheData.total_unique_objects || '-'}}</span> </div>
               </div>
@@ -41,6 +46,11 @@
               <div class="panel nd-block">
                 <div class="panel-heading">
                   <label class="title h4">New Objects <br class="hidden-xs hidden-sm">In  The Edge Cache</label>
+                  <label ng-if="!!popoverHelpHTML['new_unique_objects']" uib-popover-html="::popoverHelpHTML['new_unique_objects']" class="text-info graph-help-icon"
+                    popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                    popover-placement="top">
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                  </label>
                 </div>
                 <div class="panel-body"><span class="stats-value h4">{{vm.edgeCacheData.new_unique_objects || '-'}}</span></div>
               </div>
@@ -49,6 +59,11 @@
               <div class="panel nd-block">
                 <div class="panel-heading ">
                   <label class="title h4">Average <br class="hidden-xs hidden-sm">Configured Edge Cache TTL</label>
+                  <label ng-if="!!popoverHelpHTML['average_configured_edge_cache_ttl_ms']" uib-popover-html="::popoverHelpHTML['average_configured_edge_cache_ttl_ms']" class="text-info graph-help-icon"
+                    popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false"
+                    popover-placement="top">
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                  </label>
                 </div>
                 <div class="panel-body"><span class="stats-value h4">{{vm.edgeCacheData.average_configured_edge_cache_ttl_ms | humanizeMiliseconds:['ms'] || '-'}}</span></div>
               </div>
@@ -57,6 +72,11 @@
               <div class="panel nd-block">
                 <div class="panel-heading ">
                   <label class="title h4">Average <br class="hidden-xs hidden-sm">Age Of Served Objects</label>
+                  <label ng-if="!!popoverHelpHTML['average_age_for_served_objects_ms']" uib-popover-html="::popoverHelpHTML['average_age_for_served_objects_ms']"
+                    class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true"
+                    popover-trigger="mouseenter" popover-hoverable="false" popover-placement="top">
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                  </label>
                 </div>
                 <div class="panel-body"><span class="stats-value h4">{{vm.edgeCacheData.average_age_for_served_objects_ms | humanizeMiliseconds: ['ms'] || '-'}}</span></div>
               </div>
@@ -65,6 +85,11 @@
               <div class="panel nd-block">
                 <div class="panel-heading ">
                   <label class="title h4">Average <br class="hidden-xs hidden-sm">Cache Response Time</label>
+                  <label ng-if="!!popoverHelpHTML['average_edge_cache_response_time_ms']" uib-popover-html="::popoverHelpHTML['average_edge_cache_response_time_ms']"
+                    class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true"
+                    popover-trigger="mouseenter" popover-hoverable="false" popover-placement="top">
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                  </label>
                 </div>
                 <div class="panel-body"><span class="stats-value h4">{{vm.edgeCacheData.average_edge_cache_response_time_ms  | humanizeMiliseconds}}</span></div>
               </div>
@@ -73,6 +98,11 @@
               <div class="panel nd-block">
                 <div class="panel-heading ">
                   <label class="title h4">Average <br class="hidden-xs hidden-sm">Origin Response Time</label>
+                  <label ng-if="!!popoverHelpHTML['average_origin_response_time_ms']" uib-popover-html="::popoverHelpHTML['average_origin_response_time_ms']"
+                    class="text-info graph-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}" popover-append-to-body="true"
+                    popover-trigger="mouseenter" popover-hoverable="false" popover-placement="top">
+                    <i class="fa fa-question-circle" aria-hidden="true"></i>
+                  </label>
                 </div>
                 <div class="panel-body"><span class="stats-value h4">{{vm.edgeCacheData.average_origin_response_time_ms | humanizeMiliseconds}}</span></div>
               </div>
