--- a/code/dev/parts/reports/lm-rtt-heatmaps.html
+++ b/code/dev/parts/reports/lm-rtt-heatmaps.html
@@ -1,7 +1,11 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <h2>Global Last Mile RTT Heatmap</h2>
+      <h2 class="page-title inline-block">Global Last Mile RTT Heatmap</h2>
+      <label ng-if="!!popoverHelpHTML" uib-popover-html="::popoverHelpHTML" class="text-info page-title-help-icon" popover-popup-close-delay="{{::popoverPopupCloseDelay}}"
+        popover-append-to-body="true" popover-trigger="mouseenter" popover-hoverable="false" popover-placement="right">
+        <i class="fa fa-question-circle" aria-hidden="true"></i>
+      </label>
     </div>
   </div>
 
