--- a/code/dev/parts/ssl_names/modal/validation-info-url.tpl.html
+++ b/code/dev/parts/ssl_names/modal/validation-info-url.tpl.html
@@ -1,8 +1,8 @@
 <div class="validation-info-url">
-  <p>1. Please the following text in file “gsdv.txt”:</p>
+  <p>1. Put the following text line in file “gsdv.txt”:</p>
   <pre class="meta-tag"><strong>{{model.data.verification_object}}</strong></pre>
-  <p>2. Place the file in directory <em>“/.well-known/pki-validation/”</em> on the website</p>
-  <p>3. Select the URL to be used for verification:</p>
+  <p>2. Place the file in directory <em>“/.well-known/pki-validation/”</em> on the website.</p>
+  <p>3. Select the URL to be used for domain control validation:</p>
   <div class="col-sm-12 form-group">
     <!--Show radio buttons for elements in “verification_names” attribute-->
     <label for="" class="col-sm-12 label-control" ng-repeat="item in model.data.verification_names">
