Update Add New User Page

--- a/code/dev/parts/users/edit.html
+++ b/code/dev/parts/users/edit.html
@@ -119,10 +119,10 @@
           <div class="form-group" ng-class="{'has-error': editForm.domain.$invalid && editForm.domain.$dirty}">
             <label for="domain" class="col-sm-2 control-label">Domains</label>
             <div class="col-sm-10">
-              <span ng-show="!_loading && (getAccountDomainNameList().length==0 && companies.length==0)"><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-              <ui-select multiple ng-show="!_loading && (getAccountDomainNameList().length>0 || companies.length>0)" theme="bootstrap" class="form-control inline-block" ng-disabled="_loading" ng-model="model.domain" id="domain" name="domain">
-                <ui-select-match placeholder="{{getDomainPlaceholder()}}">{{$item.domain_name}}</ui-select-match>
-                <ui-select-choices repeat="item.domain_name as item  in getAccountDomainNameList()| filter: {domain_name: $select.search}">
+              <span ng-show="!_loading && (getAccountsDomainNameList().length==0 && companies.length==0)"><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
+              <ui-select multiple ng-show="!_loading && (getAccountsDomainNameList().length>0 || companies.length>0)" theme="bootstrap" class="form-control inline-block" ng-disabled="_loading" ng-model="model.domain" id="domain" name="domain">
+                <ui-select-match placeholder="{{domainPlaceholder}}">{{$item.domain_name}}</ui-select-match>
+                <ui-select-choices repeat="item.domain_name as item  in getAccountsDomainNameList()| filter: {domain_name: $select.search}">
                   <span ng-bind-html="item.domain_name|highlight: $select.search"></span>
                 </ui-select-choices>
               </ui-select>
