--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -102,11 +102,11 @@
             <div class="col-sm-10">
               <span ng-show="_loading && companies.length>0" class="loader--waite-company">
                 <i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-              <ui-select class="inline-block" multiple="true" ng-animate-disabled theme="bootstrap" ng-model="model.managed_account_ids"
+              <ui-select class="inline-block" multiple="true" ng-animate-disabled theme="bootstrap" ng-model="vm.managedAccountIds"
                 ng-disabled="_loading" style="min-width: 550px;" id="managed_account_ids" name="managedAccountIds" ng-if="!_loading && companies.length>0"
                 on-select="onOneManageAccountSelect($model)">
                 <ui-select-match placeholder="Add account to manage ...">{{$item.companyName}}</ui-select-match>
-                <ui-select-choices repeat="item.id as item in companiesManageList| filter: {companyName: $select.search, id:'!'+ model.companyId[0]}">
+                <ui-select-choices repeat="item as item in getCompaniesManageList()| filter: {companyName: $select.search, id:'!'+ model.companyId[0]}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
