First-mile proxy bypass validation fixed

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -190,6 +190,7 @@
   <script type="text/javascript" src="js/portal/shared/validators/validate-acl-rule-header-name.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-bot-protection-location-name.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-cache-bypass-locations.directive.js"></script>
+  <script type="text/javascript" src="js/portal/shared/validators/validate-co-bypass-locations.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-caching-rule-header-name.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-caching-rule-header-value.directive.js"></script>
   <script type="text/javascript" src="js/portal/shared/validators/validate-caching-rule-url.directive.js"></script>
