--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -15,6 +15,8 @@
 <div ng-message="cookies-options" class="alert-text alert-text--cookies-options">Incorrect cookie name format</div>
 <!-- message for validate-сache-bypass-locations -->
 <div ng-message="сache-bypass-locations" class="alert-text alert-text--сache-bypass-locations">Incorrect cache bypass location name format</div>
+<!-- message for validate-co-bypass-locations -->
+<div ng-message="co-bypass-locations" class="alert-text alert-text--co-bypass-locations">Incorrect First-Mile Proxy Bypass Location name format</div>
 <!-- message for validate-query-strings-options -->
 <div ng-message="query-strings-options" class="alert-text alert-text--query-strings-options">Incorrect query string name format</div>
 <!-- message for validate-wildcard-domain-field  -->
