--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div class="form-group" ng-class="{'has-error': createForm.accountId.$invalid && createForm.accountId.$dirty}" ng-if="auth.isReseller() || auth.isRevadmin()">
-            <label for="company" class="col-sm-2 control-label">Accounts *</label>
+            <label for="company" class="col-sm-2 control-label">Account *</label>
             <div class="col-sm-10">
               <!-- For "admin" and "user" select only one account-->
               <span ng-show="!_loading && companies.length==0" class="loader--waite-company"><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
