--- a/code/dev/parts/waf_rules/edit.html
+++ b/code/dev/parts/waf_rules/edit.html
@@ -123,15 +123,15 @@
                 <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
               </a>
               <button id="btnVerify" class="btn btn-info" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model, true) || editForm.$invalid || isReadOnly()"
-                ng-click="validateWAFRule(model)">
+                ng-click="validateWAFRule(model)" uib-tooltip="{{waf_rule_verify_help_info}}">
                 <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-check'"></i>&nbsp; Verify
               </button>
               <button id="btnUpdate" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model, true) || editForm.$invalid || isReadOnly()"
-                ng-click="updateWAFRule(model)" uib-tooltip="{{WAFRule_update_help_info}}">
+                ng-click="updateWAFRule(model)" uib-tooltip="{{waf_rule_update_help_info}}">
                 <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-file'"></i>&nbsp; Update
               </button>
               <button id="btnPublish" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model, true) || editForm.$invalid || isReadOnly()"
-                ng-click="publishWAFRule(model)" uib-tooltip="{{WAFRule_publish_help_info}}">
+                ng-click="publishWAFRule(model)" uib-tooltip="{{waf_rule_publish_help_info}}">
                 <i class="glyphicon" ng-class="_loading ? 'glyphicon-refresh spin':'glyphicon-ok'"></i> &nbsp; Publish
               </button>
             </div>
