Tiny fix in tooltip message

--- a/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
+++ b/code/dev/parts/domains/domain-image-engine/domain-image-engine.tpl.html
@@ -81,7 +81,7 @@
       <div class="col-sm-9 control-label pull-left" style="text-align:left">
         Image Optimization configuration uses modified Custom VCL Code
         <label for="refreshImageEngineConfiguration" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter"
-          uib-popover="It is possible to customize Image Optimization logic directly in “Custom VCL Code” section of the domain configuration page. This note appears when we detect that the domain is using customized Image Optimization VCL code. In order to reset the configuration to the default value you can use “Set Default Image Optimization Configuration” switch above">
+          uib-popover="It is possible to customize Image Optimization logic directly in “Custom VCL Code” section of the domain configuration page. This note appears when we detect that the domain is using customized Image Optimization VCL code. In order to reset the configuration to the default value you can use “Set Default Image Optimization Configuration” switch above.">
           <i class="fa fa-question-circle"></i>
         </label>
       </div>
